Changed the UI to work a little nicer on Android devices

--- a/README
+++ b/README
@@ -1,18 +1,46 @@
-Welcome to your Appcelerator Titanium Mobile Project
+## Appcelerator Device Tracker project.
 
-This is a blank project.  Start by editing your application's app.js to 
-make your first mobile project using Titanium.
+This project was created with the idea that we could keep track of all Appcelerator test devices.
+Each device has it's own unique barcode and each user/developer has their own unique barcode.
 
+The barcodes supported by the scanner are: EAN, UPC and QR codes
 
+### How To Use:
 
-----------------------------------
-Stuff our legal folk make us say:
+##### To assign a device to yourself for testing:
+1. Scan your own barcode.
+2. Scan all the devices you wish to use.
+3. Double tap the screen to assign the devices to yourself.
 
-Appcelerator, Appcelerator Titanium and associated marks and logos are 
-trademarks of Appcelerator, Inc. 
+##### To remove a device from yourself:
+1. Scan the devices you wish to return to the device cabinet.
+2. Double tap the screen to remove the devices from yourself.
 
-Titanium is Copyright (c) 2008-2013 by Appcelerator, Inc. All Rights Reserved.
+##### If you wish to remove devices from yourself while taking out more devices:
+1. Scan your own barcode.
+2. Scan the devices you want to return.
+3. Scan the devices you want to use.
+4. Double tap the screen to assign the devices accordingly.
+(You can scan the devices in any order, the app will figure out which device is to be returned and which is to be assigned)
 
-Titanium is licensed under the Apache Public License (Version 2). Please
-see the LICENSE file for the full license.
+##### Check if the device you want is available:
+1. Open the table view by selecting the second tab.
+2. Select the platform you are looking for.
+3. Find the device you wish to use (Devices are listed in order of the OS version)
+4. Select the device and information about the device will be displayed.
 
+##### If you find a device around the office that is no longer in use:
+1. If you wish to use the device, scan your barcode and then scan the device QR code, then double tap the screen.
+2. If you wish to return the device, scan the device barcode and double tap the screen.
+
+##### If you want to transfer a device from one user/developer to another:
+1. The user/developer who wishes to use the device scans their barcode, then scan the device barcode.
+2. Double tap the screen.
+(The device will be removed from the old user and attached to the new user)
+
+##### If you have lost your unique barcode:
+1. Log in using the 'Log In' button.
+2. Scan the devices you wish to use.
+3. Double tap the screen to assign the devices accordingly.
+4. Log out using the 'Log Out' button.
+5. Request a new barcode from your Administrator.
